# serpent-tools

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  CONTRIBUTORS.MD  CONTRIBUTORS.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  testNotebooks.sh  versioneer.py
.github/: contributing.rst  issue_template.md  issue_template.rst  pull_request_template.md  pull_request_template.rst
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: testing.yaml
data/: bwr_0_dep.m  bwr_1_det0.m  bwr_badInventory_dep.m  plut_xs0.m
docs/: Makefile  about.rst  changelog.rst  command-line.rst  conf.py  config.rst  containers.rst  contributing.rst  contributors.rst  defaultSettings.rst  glossary.rst  index.rst  install.rst  issue_template.rst  license.rst  magicPlotDoc.py  makeSettings.py  misc.rst  next.rst  overview.rst  publications.rst  readers.rst  requirements.txt  rstDefaultSettings.py  rstVariableSets.py  samplers.rst  settings.rst  settingsTop.rst  variableGroups.rst  variableGroupsTop.rst
docs/_templates/: myclass.rst  mydetector.rst  myexception.rst  myfunction.rst
docs/api/: DepletionMatrix.rst  branching.rst  bumat.rst  containers.rst  data.rst  depletion.rst  detector.rst  detectors.rst  engines.rst  exceptions.rst  history.rst  index.rst  io.rst  messages.rst  microxs.rst  parsers.rst  plot.rst  results.rst  sampler.rst  seed.rst  sensitivity.rst  settings.rst  support.rst  xs.rst  xsplot.rst
docs/containers/: containers.rst  detectors.rst  index.rst  materials.rst  universes.rst
docs/contributing/: contributing.rst  index.rst  (+3 more)
examples/: BranchToNodalDiffusion.ipynb  Branching.ipynb  DepletionMatrix.ipynb  DepletionReader.ipynb  Detector.ipynb  Detector.rst  FissionMatrixReader.ipynb  Framatome.ipynb  MicroXSReader.ipynb  ResultsReader.ipynb  Sensitivity.ipynb  Settings.ipynb  XSPlot.ipynb  XSPlot.rst  bwr_det0.m  demo.coe  demo_dep.m  demo_dep_framatome.m  demo_det0.m  fuelPin_det0.m  myConfig.yaml  nodal_writer.py  pwrPin_res.m  rstTemplate.tpl
serpentTools/: __init__.py  __main__.py  _compat.py  _version.py  base.py  data.py  detectors.py  detfile.py  engines.py  messages.py  plot.py  resultFile.py  seed.py  settings.py  utils.py  variables.yaml  xs.py
tests/: __init__.py  conftest.py  test_ResultsReader.py  test_base_compare.py  test_branching.py  test_container.py  test_depSampler.py  test_depletion.py  test_depmtx.py  test_detSampler.py  test_detector.py  test_detectors.py  test_engines.py  test_history.py  test_messages.py  test_meta.py  test_microxs.py  test_next_detector.py  test_parserLevelRead.py  test_plot.py  test_pt_depletion.py  test_pt_results.py  test_pt_utils.py  test_pt_xsplot.py  test_results.py  test_seed.py  test_sensivity.py  test_settings.py  test_toMatlab.py  test_utils.py  test_variables.py  test_xs.py  test_xsplot.py  test_zzzzz.py
tools/: checkLint.sh  ci_test.sh  testNotebooks.sh
(+213 files in other folders)
