[metadata]
name = serpentTools
version = 0.10.0.dev0
description =A suite of parsers for expediting analysis with Serpent
long_description = file: README.rst
url ="https://github.com/CORE-GATECH-GROUP/serpent-tools"
author=serpentTools developer team
maintainer=Andrew Johnson
maintainer_email=ajohnson400@gatech.edu
keywords=Serpent, parsers, nuclear engineering, transport
license=MIT
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data=True
install_requires = 
    numpy>=1.16.0
    matplotlib>=2.2.3
    pyyaml>=5.1.1
packages = find:
python_requires = >=3.5, <3.8

[flake8]
exclude = 
    .tox,
    __pycache__,
    .pyc,
    build,
    _build,
    dist,
    .git,
    serpentTools/__init__.py
    serpentTools/objects/__init__.py
# to ignore
# E402: Module level import not at top of file
# W503: Line break before binary operator
ignore = 
    E402
    W503

[tool:pytest]
addopts=-rs

[coverage:run]
branch = true
source = serpentTools
